backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    namespace: wanderlust
    name: backend-deployment
    labels:
        app: backend
spec:
    replicas: 3
    selector:
        matchLabels:
            app: backend
    template:
        metadata:
            labels:
                app: backend
        spec:
            containers:
            -   name: frontend-deployment
                image: 307946649652.dkr.ecr.ap-south-1.amazonaws.com/wanderlust-backend:backend-54
                ports:
                - containerPort: 5000
