frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: frontend-deployment
    namespace: wanderlust
    labels:
        app: frontend
spec:
    replicas: 2
    selector:
        matchLabels:
            app: frontend
    template:
        metadata:
            labels:
                app: frontend
        spec:
            containers:
                - name: frontend-deployment
                  image: 307946649652.dkr.ecr.ap-south-1.amazonaws.com/wanderlust-frontend:frontend-47
                  ports:
                      - containerPort: 80
