backend-service.yml
apiVersion: v1
kind: Service
metadata:
    name: backend-service
    namespace: wanderlust
spec:
    type: ClusterIP
    selector:
        app: backend
    ports:
        -   port: 8080
            targetPort: 8080
            protocol: TCP
