frontend-service.yml
apiVersion: v1
kind: Service
metadata:
    name: frontend-service
    namespace: wanderlust
    annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "classic"
spec:
    type: LoadBalancer
    selector:
        app: frontend
    ports:
        -   port: 5173
            targetPort: 5173
            protocol: TCP
